--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Products</string>
+    <string name="frequently_ordered">Frequently Ordered</string>
+    <string name="recommended">Recommended</string>
+    <string name="Rs">\u20B9 %1$s</string>
+
+    <string name="append_string_with_space">QTY %1$s</string>
 </resources>
